<resources>
    <string name="app_name">FindNearBars</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_view_label_title">Название</string>
    <string name="text_view_label_address">Адрес:</string>
    <string name="text_view_label_timetable">Время работы:</string>
    <string name="text_view_label_phone">Телефон:</string>
    <string name="text_view_label_site">Сайт:</string>
    <string name="image_view_description_more">иконка знака больше</string>
    <string name="image_view_description_add_to_favorite">иконка знака добавить в избарнное</string>
    <string name="image_view_description_photo_of_bar">изображение заведение</string>
    <string name="image_view_description_icon_of_title">иконка названия</string>
    <string name="image_view_description_icon_of_address">иконка адреса</string>
    <string name="image_view_description_icon_of_distance">иконка расстояния</string>
    <string name="text_view_label_what_number_are_colling">По какому номеру будем звонить?</string>
    <string name="image_view_icon_of_phone">иконка телефона</string>
    <string name="image_view_description_photo_of_bar_for_details">изображение бара для details</string>
    <string name="image_view_description_counter_of_favorite">количество людей которые добавили в избранное</string>
    <string name="text_view_i_am_here">Я тут</string>
    <string name="text_view_find_bar">Найти заведения</string>
    <string name="edit_text_hint_enter_distance">Введите расстояние в метрах</string>
    <string name="image_view_description_icon_search">иконка лупы</string>
    <string name="text_view_label_contacts">Контакты</string>
    <string name="image_view_description_github">иконка гитхаба</string>
    <string name="image_view_description_icon_of_mail">иконка почты</string>
    <string name="text_view_label_refresh">Обновить данные</string>
    <string name="image_view_description_refresh">иконка обноления</string>
    <string-array name="distance_items">
        <item>10м</item>
        <item>50м</item>
        <item>100м</item>
        <item>500м</item>
        <item>1км</item>
        <item>1.5км</item>
    </string-array>
</resources>