<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_gray"
        android:title=""/>
    <item
        android:id="@+id/navigation_near"
        android:icon="@drawable/ic_near_gray"
        android:title=""/>
    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favourite_gray"
        android:title=""/>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_gray"
        android:title=""/>

</menu>