<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="24dp"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewShortNear"
            android:layout_width="150dp"
            android:layout_height="200dp"
            tools:srcCompat="@drawable/ic_no_image_3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_view_description_photo_of_bar"/>

        <ImageView
            android:id="@+id/imageViewTitleNear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            tools:layout_editor_absoluteX="209dp"
            tools:layout_editor_absoluteY="54dp"
            android:src="@drawable/ic_title_2"
            app:layout_constraintTop_toTopOf="@id/imageViewShortNear"
            app:layout_constraintStart_toEndOf="@id/imageViewShortNear"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_view_description_icon_of_title"
            />

        <ImageView
            android:id="@+id/imageViewAddressNear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            tools:layout_editor_absoluteX="217dp"
            tools:layout_editor_absoluteY="117dp"
            android:src="@drawable/ic_address_2"
            app:layout_constraintTop_toBottomOf="@id/imageViewTitleNear"
            app:layout_constraintStart_toEndOf="@id/imageViewShortNear"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/image_view_description_icon_of_address"
            />
        <ImageView
            android:id="@+id/imageViewDistanceNear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            tools:layout_editor_absoluteX="217dp"
            tools:layout_editor_absoluteY="117dp"
            android:src="@drawable/ic_distance"
            app:layout_constraintTop_toBottomOf="@id/imageViewAddressNear"
            app:layout_constraintStart_toEndOf="@id/imageViewShortNear"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/image_view_description_icon_of_distance"
            />

        <TextView
            android:id="@+id/textViewShortTitleNear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/imageViewTitleNear"
            app:layout_constraintBottom_toBottomOf="@id/imageViewTitleNear"
            app:layout_constraintStart_toEndOf="@id/imageViewTitleNear"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/textViewShortAddressNear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/imageViewAddressNear"
            app:layout_constraintBottom_toBottomOf="@id/imageViewAddressNear"
            app:layout_constraintStart_toEndOf="@id/imageViewAddressNear"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/textViewShortDistanceNear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/imageViewDistanceNear"
            app:layout_constraintBottom_toBottomOf="@id/imageViewDistanceNear"
            app:layout_constraintStart_toEndOf="@id/imageViewTitleNear"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>