<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="24dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewFavorite"
            android:layout_width="150dp"
            android:layout_height="200dp"
            tools:srcCompat="@drawable/ic_no_image_3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_view_description_photo_of_bar"/>

        <ImageView
            android:id="@+id/imageViewTitleFavorite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            tools:layout_editor_absoluteX="209dp"
            tools:layout_editor_absoluteY="54dp"
            android:src="@drawable/ic_title_2"
            app:layout_constraintTop_toTopOf="@id/imageViewFavorite"
            app:layout_constraintStart_toEndOf="@id/imageViewFavorite"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_view_description_icon_of_title"

            />

        <ImageView
            android:id="@+id/imageViewAddressFavorite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            tools:layout_editor_absoluteX="217dp"
            tools:layout_editor_absoluteY="117dp"
            android:src="@drawable/ic_address_2"
            app:layout_constraintTop_toBottomOf="@id/imageViewTitleFavorite"
            app:layout_constraintStart_toEndOf="@id/imageViewFavorite"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/image_view_description_icon_of_address"
            />

        <ImageView
            android:id="@+id/imageViewCountOfFavorite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            tools:layout_editor_absoluteX="217dp"
            tools:layout_editor_absoluteY="117dp"
            android:src="@drawable/ic_count_of_favorite"
            app:layout_constraintTop_toBottomOf="@id/imageViewAddressFavorite"
            app:layout_constraintStart_toEndOf="@id/imageViewFavorite"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/image_view_description_counter_of_favorite"
            />

        <TextView
            android:id="@+id/textViewTitleFavourite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/imageViewTitleFavorite"
            app:layout_constraintBottom_toBottomOf="@id/imageViewTitleFavorite"
            app:layout_constraintStart_toEndOf="@id/imageViewTitleFavorite"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/textViewAddressFavourite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/imageViewAddressFavorite"
            app:layout_constraintBottom_toBottomOf="@id/imageViewAddressFavorite"
            app:layout_constraintStart_toEndOf="@id/imageViewAddressFavorite"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            />

        <TextView
            android:id="@+id/textViewCountOfFavorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/imageViewCountOfFavorite"
            app:layout_constraintBottom_toBottomOf="@id/imageViewCountOfFavorite"
            app:layout_constraintStart_toEndOf="@id/imageViewCountOfFavorite"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>